# draftnrun

./: .dockerignore  .env.test  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.scheduler  Dockerfile.webhook-worker  Dockerfile.worker  E2B_SANDBOX_TOOL_IMPLEMENTATION.md  LICENSE.md  Makefile  PROBLEME_ORGANISATION_SWITCH.md  PYTEST_FIXES_SUMMARY.md  README.md  commit-authors.txt  credentials.env.example  custom_models.exemple.json  docker-compose.yml  local_llms_for_testing.json  locustfile.py  logger.py  logging-config.yaml  openai_code_interpreter_implementation.md  package.json  pnpm-lock.yaml  pyproject.toml  registry_component_linking_analysis.md  settings.py  test_async_agent.py  test_celery_queues.py  test_schedule_cleanup.py  test_slack_integration.py  test_slack_oauth_integration.py  test_slack_real.py  test_source_update.py  test_timezone_system.py  trace.session.sql
.cursor/rules/: architecture.mdc  auth.mdc  engine.mdc  general.mdc  git-sync.mdc  mcp.mdc  routers.mdc  services.mdc
.github/workflows/: .github-ci.yml  build-and-deploy-k8s.yml  deploy-ada-preprod.yml  deploy-ada-prod.yml  deploy-ada-staging.yml  deploy-ingestion-preprod.yml  deploy-ingestion-prod.yml  deploy-ingestion-staging.yml  deploy-systemd-ingestion-prod.yml  deploy-systemd-ingestion-staging.yml  deploy-systemd-nango-prod.yml  deploy-systemd-nango-staging.yml  deploy-systemd-preprod.yml  deploy-systemd-prod.yml  deploy-systemd-staging.yml  e2b-ci.yml  external-api-calls-ci.yml  frontend-ci.yml  gunicorn_config.md  llm-service-ci.yml  pdf-integration-ci.yml  qdrant-ci.yml  reload-apscheduler-prod.yml  reset-k8s-staging-to-main.yml  reset-staging-to-main.yml  restore-prod-dump-test.yml  restore-prod-dump.yml  sync-prod-to-staging.yml  test-project-flow.yml
ada_backend/: README.md  celery_app.py  context.py  django_settings.py  error_handlers.py  instrumentation.py  main.py  mixpanel_analytics.py  run_scheduler.py  scheduler_boot.py  segment_analytics.py
ada_backend/admin/: admin.py
ada_backend/database/: alembic.ini  alembic.md  component_definition_seeding.py  models.py  seed_db.py  seed_project_db.py  setup_db.py  trace_models.py  utils.py
ada_backend/django_scheduler/: __init__.py  django_settings.py  manage.py  models.py  settings.py  setup_django_beat_schema.py  sync_backend_to_django.py
ada_backend/docs/: api-reference.md  auth.md  credits.md  db_schema.dbml  engine.md  git-sync.md  migration-deploy-strategy.md  payload-and-data-flow.md  prompts.md  qa-system.md  webhooks.md
ada_backend/graphql/: context.py  mutations.py  queries.py  schema.py
ada_backend/middleware/: memory_tracking_middleware.py  rate_limit_middleware.py  request_context.py
ada_backend/repositories/: agent_repository.py  alert_email_repository.py  api_key_repository.py  categories_repository.py  component_repository.py  costs_repository.py  credits_repository.py  cron_repository.py  edge_repository.py  env_repository.py  field_expression_repository.py  field_formula_repository.py  git_sync_repository.py  github_app_installation_repository.py  global_secret_repository.py  graph_runner_repository.py  ingestion_task_repository.py  input_port_instance_repository.py  integration_repository.py  knowledge_repository.py  llm_judges_repository.py  llm_models_repository.py  oauth_connection_repository.py  organization_repository.py  output_port_instance_repository.py  parameters_repository.py  port_configuration_repository.py  port_definition_repository.py  port_mapping_repository.py  project_options_repository.py  project_repository.py  prompt_repository.py  qa_evaluation_repository.py  qa_session_repository.py  quality_assurance_repository.py  question_answer_repository.py  release_stage_repository.py  run_input_repository.py  run_repository.py  schedule_repository.py  (+11 more)
ada_backend/routers/: admin_tools_router.py  agent_router.py  alert_email_router.py  auth_router.py  categories_router.py  component_version_router.py  components_router.py  costs_router.py  credits_router.py  cron_router.py  debug_memory_router.py  git_sync_router.py  global_secret_router.py  graph_display_stream_router.py  graph_execution_stream_router.py  (+32 more)
ada_ingestion_system/: .env.example  Dockerfile  docker-compose.yml
config/: tempo.yaml
data_ingestion/: boto3_client.py  utils.py
db-init/: init-db.sql
docs/: FUTURE_K8S_MIGRATION.md  K8S_DEBUGGING.md  TODO_K8S.md  k8s-deployment-guide.md  parameter-resolution-phases.md  repository-service-router-pattern.md  unified_parameters_phase3_plan.md  variable-sets-org-level.md
engine/: coercion_matrix.py  constants.py  datetime_utils.py  errors.py  legacy_compatibility.py  log_redaction.py  prometheus_metric.py  qdrant_service.py  secret.py  secret_utils.py  temps_folder_utils.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc  DAT.md  INVITATION_SETUP.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
ingestion_script/: client_specific_functions.py  folder_utils.py  ingest_db_source.py  ingest_folder_source.py  ingest_website_source.py  main.py  utils.py
k8s/: ada-deployments-prod.yaml  ada-deployments-staging.yaml  deploy.yaml
mcp_server/: Dockerfile  README.md  client.py  context.py  docs.py  server.py  settings.py
scripts/: classify_migration.py  detect_changed_migrations.py  fastmcp_debug_server.py  get_hubspot_oauth_token.py  local_llm_simulator.py  manual_hubspot_mcp_test.py  manual_remote_mcp_test.py  migrate_collection_to_hybrid.py  render_configs.sh  simulate_slack_frontend_flow.py  test_oauth_flow.py  test_oauth_token_usage.py  test_observability_stack.sh  test_project_flow.py
services/: docker-compose.yml
shared/: log_redaction.py
supabase/: config.toml  seed.sql
tests/: conftest.py  test_classify_migration.py  test_default_completion_model_migration.py  test_detect_changed_migrations.py  test_oauth_token_usage.py  test_unified_parameters.py
webhook_scripts/: webhook_main.py
workers/: .env.example
(+1612 files in other folders)
