[tool.poetry]
name = "ada-ai-backend"
version = "0.0.1"
description = "Backend of an AI platform."
authors = [
  "Marc Sanselme <marc@scopeo.ai>",
  "Jean-Christophe Corvisier <jean-christophe@scopeo.ai>",
  "Diana Mkhitaryan <diana@scopeo.ai>",
  "Pablo Skewes <pablo@scopeo.ai>",
  "Natacha Humeau <natacha@scopeo.ai>",
  "Mel Owen <mel@scopeo.ai>",
]
readme = "README.md"
packages = [{ include = "engine" }, { include = "ada_ingestion_system" }]

[tool.poetry.dependencies]
python = "<3.12,>3.10"
openai = "1.76.0"
httpx = ">=0.28.1"
pandas = "2.1.4"
numpy = "1.26.2"
anytree = "2.12.1"
python-dotenv = "1.0.0"
setuptools = "<=80.9.0"
pydantic-settings = "2.1.0"
requests = "2.32.2"
llama-index = "^0.12.38"
itsdangerous = "^2.2.0"
qdrant-client = "^1.10.0"
snowflake = "^1.0.5"
pymupdf = "^1.24.5"
tavily-python = "^0.5.0"
more-itertools = "^10.5.0"
sqladmin = "^0.20.1"
aiosqlite = "^0.20.0"
supabase = "^2.13.0"
fastapi = "^0.115.8"
alembic = "^1.14.1"
google-genai = "^1.9.0"
redis = "^5.2.1"
structlog = "^25.3.0"
prometheus-client = "^0.21.1"
boto3 = "^1.38.4"
snowflake-sqlalchemy = "1.7.3"
mysql-connector-python = "9.3.0"
uvicorn = "^0.34.3"
strawberry-graphql = { extras = ["fastapi"], version = "^0.266.0" }

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
anyio = "^4.9.0"
flake8-pyproject = "^1.2.3"
requests-mock = "1.11.0"
flake8 = "^7.1.1"
black = "^24.8.0"
coverage = "^7.6.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.tracing.dependencies]
wrapt = "1.17.2"
openinference-instrumentation-openai = "^0.1.12"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-api = "^1.25.0"
openinference-semantic-conventions = "^0.1.9"

[tool.poetry.group.api.dependencies]
gunicorn = "^22.0.0"

[tool.poetry.group.docx.dependencies]
pypandoc = "1.14"

[tool.poetry.group.google_drive.dependencies]
google-api-python-client = "2.119.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"

[tool.poetry.group.customer_service.dependencies]
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.3"

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "2.9.9"

[tool.poetry.group.hubspot.dependencies]
fuzzywuzzy = "^0.18.0"

[tool.poetry.group.cohere.dependencies]
cohere = "^5.11.2"

[tool.poetry.group.mistralai.dependencies]
mistralai = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
/(
    \.venv
  | venv_poetry_chatbot
)/
)
'''

[tool.coverage.run]
data_file = ".coverage/coverage"
branch = true
omit = ["./venv/**/*"]
source = ["."]

[tool.coverage.report]
fail_under = 10
skip_covered = true
show_missing = true

[tool.coverage.html]
directory = ".coverage/htmlcov"

[tool.coverage.xml]
output = ".coverage/coverage.xml"

[tool.flake8]
ignore = "E203, W503"
max-line-length = 119
exclude = [".venv"]
filename = ["*.py"]
per-file-ignores = """
    tests/conftest.py: F401
"""
